fixed photographer page cropping photos

--- a/components/layout/HoriScroll/styles.scss
+++ b/components/layout/HoriScroll/styles.scss
@@ -1,6 +1,6 @@
 .main {
   width: 100%;
-  height: calc(100vh - 60px);
+  height: calc(100vh - 145px);
   top: calc(60px + 85px);
   position: absolute;
   img {
